# warheadhateus

./: .gitmodules  .travis.yml  Cargo.toml  README.md  index.html
examples/: ec2.rs  emr.rs  iam.rs  s3_multi.rs  s3_single.rs  sts.rs
scripts/: id_rsa.enc  travis-doc-upload.cfg
src/: error.rs  lib.rs  mode.rs  region.rs  service.rs  types.rs  utils.rs
tests/: tests.rs
tests/s3/: chunked.rs  mod.rs  single.rs
tests/v2/: mod.rs
warheadhateus/: search-index.js
warheadhateus/num/iter/: struct.Range.html  struct.RangeInclusive.html  struct.RangeStep.html  struct.RangeStepInclusive.html
warheadhateus/rustc_serialize/json/: struct.Parser.html
warheadhateus/sodium_sys/: enum.SSError.html  index.html  sidebar-items.js
warheadhateus/sodium_sys/crypto/: index.html  sidebar-items.js
warheadhateus/src/sodium_sys/: lib.rs.html
warheadhateus/src/urlparse/: lib.rs.html  query_string.rs.html  quote.rs.html  unquote.rs.html  url.rs.html
warheadhateus/src/warheadhateus/: error.rs.html  lib.rs.html  mode.rs.html  region.rs.html  service.rs.html  types.rs.html  utils.rs.html
warheadhateus/warheadhateus/: enum.AWSAuthError.html  enum.HttpRequestMethod.html  enum.Mode.html  enum.Region.html  enum.SAM.html  enum.Service.html  enum.SigningVersion.html  fn.hashed_data.html  fn.signed_data.html  index.html  sidebar-items.js  struct.AWSAuth.html  struct.ParseRegionError.html  struct.ParseServiceError.html  type.AWSAuthResult.html
warheadhateus/warheadhateus/error/: enum.AWSAuthError.html  sidebar-items.js  struct.ParseRegionError.html  struct.ParseServiceError.html
(+246 files in other folders)
