[package]
authors = ["Jason Ozias <jason.ozias@gmail.com>"]
description = "AWS Authorization Header Generation (AWS Signature Version 4)"
documentation = "http://rustyhorde.github.io/warheadhateus"
homepage = "http://rustyhorde.github.io/warheadhateus"
keywords = ["aws", "authorization", "header", "s3"]
license = "MIT/Apache-2.0"
name = "warheadhateus"
readme = "README.md"
repository = "https://github.com/rustyhorde/warheadhateus"
version = "0.1.0"

[dependencies]
chrono = "0.2.19"
log = "0.3.5"
rustc-serialize = "0.3.18"
sodium-sys = "0.0.4"
urlparse = "0.7.3"

[dependencies.clippy]
optional = true
version = "0.0.43"

[features]
lint = ["clippy"]
